# pyramid_hybridauth

./: .gitignore  CHANGELOG.md  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
example/: .coveragerc  .gitignore  MANIFEST.in  development-sample.ini  development.sample.ini  pyproject.toml  pytest.ini  setup.py
example/example/: __init__.py  auth.py  routes.py  tests.py  views.py
example/example/templates/: home.html  login.html  login.pt  mytemplate.pt  popup.html  popup.pt
example/example/views/: __init__.py
pyramid_hybridauth/: __init__.py  providers.py
src/pyramid_hybridauth/: __init__.py  config.py  exceptions.py  provider.py
src/pyramid_hybridauth/providers/: __init__.py  facebook.py  google.py  ninja.py  provider.py  twitter.py  yahoo.py
src/pyramid_hybridauth/services/: __init__.py  facebook.py  google.py  ninja.py  twitter.py  yahoo.py
tests/: test_pyramid_hybridauth.py
