[tool.poetry]
name = "example"
version = "1.0.0"
description = ""
authors = ["Yoshimitsu Kokubo <yoshi@unplus.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^1.10"
pyramid_jinja2 = "^2.8"
waitress = "^1.2"
pyramid-hybridauth = { path = "../" }
# pyramid-hybridauth = "=1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.7.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest-mock = "^3.5.1"
tox = "^3.22.0"

[tool.poetry.plugins."paste.app_factory"]
"main" = "example:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''
